--- a/css/index.css
+++ b/css/index.css
@@ -3167,6 +3167,7 @@ h1.page-title + .tag-cloud-list {
   vertical-align: text-bottom;
 }
 #page-header {
+  background: url(https://cdn2.zzzmh.cn/wallpaper/origin/27524ac7880511ebb6edd017c2d2eca2.jpg/thumbs?auth_key=1663171200-eff484e386d9f0804ca5800cc543c463-0-19fa4ef64b18700833486ea73c66113f);
   position: relative;
   width: 100%;
   background-color: #49b1f5;
